Revert "Revert "Fix canvas rotation being off on devices which are naturally landscape.""
Reverting the Revert because we found the reason for the blurry image.

This reverts commit 7afd816cf918ed94b2ebf7671f804ae0f769fcb9.

--- a/res/app/control-panes/device-control/device-control.css
+++ b/res/app/control-panes/device-control/device-control.css
@@ -3,20 +3,11 @@
   -moz-transition: 1s linear opacity;
   -o-transition: 1s linear opacity;
   transition: 1s linear opacity;
-
   opacity: 0;
 }
 
 .enter-fade.enter-fade-active {
   opacity: 1;
-}
-
-device-screen canvas {
-  transition: width 100ms linear, -webkit-transform 250ms ease-in-out;
-  -webkit-transform-origin: 50% 50%;
-  transform-origin: 50% 50%;
-  -webkit-transform: width, rotate(0deg);
-  transform: width, rotate(0deg);
 }
 
 device-screen {
@@ -35,12 +26,14 @@ device-screen {
 
 device-screen canvas {
   position: absolute;
-  margin: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  pointer-events: none; /* MUST HAVE */
+  top: 50%;
+  left: 50%;
+  pointer-events: none; /* MUST HAVE or touch coordinates will be off */
+  transition: width 100ms linear, -webkit-transform 250ms ease-in-out;
+  -webkit-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+  -webkit-transform: rotate(0deg);
+  transform: translate(-50%, -50%) rotate(0deg);
 }
 
 device-screen .finger {
